@@ -117,6 +117,7 @@ describe('treesitter language API', function()
       '<node translation_unit>',
       exec_lua(function()
         local langtree = vim.treesitter.get_parser(0, 'c')
+        langtree:parse()
         local tree = langtree:tree_for_range({ 1, 3, 1, 3 })
         return tostring(tree:root())
       end)
@@ -133,6 +134,7 @@ describe('treesitter language API', function()
       '<node translation_unit>',
       exec_lua(function()
         local langtree = vim.treesitter.get_parser(0, 'c')
+        langtree:parse()
         local tree = langtree:tree_for_range({ 10, 10, 10, 10 })
         return tostring(tree:root())
       end)
@@ -149,6 +151,7 @@ describe('treesitter language API', function()
       '<node primitive_type>',
       exec_lua(function()
         local langtree = vim.treesitter.get_parser(0, 'c')
+        langtree:parse()
         local node = langtree:named_node_for_range({ 1, 3, 1, 3 })
         return tostring(node)
       end)
@@ -160,6 +163,7 @@ describe('treesitter language API', function()
 
     exec_lua(function()
       _G.langtree = vim.treesitter.get_parser(0, 'lua')
+      _G.langtree:parse()
       _G.node = _G.langtree:node_for_range({ 0, 3, 0, 3 })
     end)
 
